--- a/style.css
+++ b/style.css
@@ -14,7 +14,11 @@ a {
     box-sizing: border-box;
 
 }
-
+@font-face {
+    font-family: tipografia;
+    src: url(/assets/Poppins-Regular.ttf);
+    
+}
 /*-------Header-----------*/
 header nav{
 display: flex;
@@ -71,4 +75,19 @@ header nav ul {
      font-size: 24px;
 
 }
+.card_imagen {
+    width: 100%;
+    height: 300%;
+    object-fit:cover;
+}
 
+.section-card {
+    display:flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.section-card {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+ 
