--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ header nav ul {
     background-color: #f4f5;
     border-radius: 10px;
     width: 100%;
+    height: 100%;
 }
 
 .section__card {
@@ -90,7 +91,7 @@ header nav ul {
     padding: 30px;
 }
 
-.card_img {
+.card__img {
     width: 100%;
     justify-content: center;
     align-items: center;
